# prmpt

./: .gitignore  Cargo.toml  README.md  curly.yaml  output.txt  prmpt.yaml
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/curly/: config.rs  inject_code.rs  mod.rs  parse_python.rs  run.rs  utils.rs
src/prmpt/: config.rs  inject_code.rs  parse_python.rs  run.rs  traits.rs  utils.rs
test/: output.txt
tests/: generate_snapshots.rs  inject.rs
tests/snapshot_tests/test_repos/config_and_ignore_false_test/: .gitignore  another_rust_file.rs  curly.yaml
tests/snapshot_tests/test_repos/config_and_ignore_test/: curly.yaml  include_me.rs  main.rs
tests/snapshot_tests/test_repos/gitignore_no_git_test/: .gitignore  curly.yaml  ignored.rs
tests/snapshot_tests/test_repos/javascript_ignore_test/: curly.yaml
tests/snapshots/: generate_snapshots__config_and_ignore_false_snapshot.snap  generate_snapshots__config_and_ignore_false_snapshot.snap.new  generate_snapshots__config_and_ignore_snapshot.snap  generate_snapshots__config_and_ignore_snapshot.snap.new  generate_snapshots__gitignore_without_git_respected.snap  generate_snapshots__language_specific_ignore_javascript_snapshot.snap  generate_snapshots__language_specific_ignore_snapshot.snap  generate_snapshots__language_specific_ignore_typescript_snapshot.snap  generate_snapshots__output_file_ignorance_snapshot.snap  generate_snapshots__sample_project_1_default_snapshot.snap  generate_snapshots__sample_project_1_default_snapshot.snap.new  generate_snapshots__sample_project_1_docs_only_snapshot.snap  generate_snapshots__sample_project_1_docs_only_snapshot.snap.new  generate_snapshots__sub_config_use_gitignore_snapshot.snap
(+15 files in other folders)
