[package]
name = "curly"
version = "0.2.0"
edition = "2021"

[dependencies]
# Existing dependencies
clap = { version = "4.5.7", features = ["derive"] }
env_logger = "0.11.3"
glob = "0.3.1"
log = "0.4.21"
rayon = "1.10.0"
walkdir = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
regex = "1.7.1"

# Add tree-sitter dependencies
tree-sitter = "0.20.7"
tree-sitter-python = { version = "0.20.0" }
serde_json = "1.0.135"
ignore = "0.4.23"
globset = "0.4" # Added globset
rand = "0.9.1"
anyhow = "1.0.98"

[dev-dependencies]
insta = { version = "1.43.1", features = ["yaml"] }
tempfile = "3"
