[package]
name = "prmpt"
version = "0.2.0"
edition = "2021"
authors = ["Emmanuel Olowe emmanuel@labiium.com"]
license = "Apache-2.0"
repository = "https://github.com/labiium/prmpt"
homepage = "https://github.com/labiium/prmpt"
documentation = "https://docs.rs/prmpt"
readme = "README.md"
keywords = ["command-line-utilities", "development-tools"]

[dependencies]
# Core CLI and utilities
clap = { version = "4.5.21", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
anyhow = "1.0.93"

# File system and pattern matching
glob = "0.3.1"
walkdir = "2.5.0"
ignore = "0.4.23"
globset = "0.4.15"

# Serialization
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.133"

# Tree-sitter dependencies
tree-sitter = "0.24.4"
tree-sitter-python = "0.23.4"

# Utilities
rayon = "1.10.0"
regex = "1.11.1"
rand = "0.9.2"

[dev-dependencies]
insta = { version = "1.43.1", features = ["yaml"] }
tempfile = "3.14.0"
